--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ VSDb Client
 </title>
 <body><center><tt>
 <BR><BR>
-<img src="head.jpg">
+<img src="head.png">
 <BR><BR><BR><BR><BR>
 <form name="input" action="read.php" method="POST">
 <label for="key">KEY: </label><input name="key" id="key" type="password" class="formbox" />
